fix: 🐛 change css to fit browser's dark mode
change global.scss and banner.page.scss  to fit browser's dark mode

--- a/src/app/common/components/banner/banner.page.scss
+++ b/src/app/common/components/banner/banner.page.scss
@@ -33,6 +33,7 @@
   font-weight: 600;
   font-family: 'Source Sans Pro', sans-serif;
   margin: 0;
+  color: #000;
 }
 .centent .desc {
   line-height: 22px;
