--- a/src/global.scss
+++ b/src/global.scss
@@ -29,6 +29,7 @@ body {
   font-family: 'Source Sans Pro', sans-serif;
   margin: 0;
   font-size: 17px;
+  color: #000;
 }
 ion-content {
   --background: #fbfbfb;
@@ -313,6 +314,7 @@ ion-button {
   font-weight: normal;
   text-align: center;
   line-height: 41px;
+  color: #000;
 }
 .claim-title {
   margin-top: 16px;
@@ -329,6 +331,7 @@ ion-button {
 
 ion-toggle {
   --background-checked: var(--ion-color-primary);
+  --background: rgba(34, 31, 31, 0.26);
 }
 .error {
   font-size: 13px !important;
